weather/kube/weather-deployment.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: gweather-server
    labels:
      app: grpc-weather
      tier: backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: grpc-weather
        tier: backend
    template:
      metadata:
        labels:
          app: grpc-weather
          tier: backend
      spec:
        containers:
        - image: caiofilipini/grpc-weather:master
          imagePullPolicy: IfNotPresent
          name: gweather-server
          ports:
            - containerPort: 9000
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: grpc-weather
    name: gweather-server
  spec:
    ports:
    - name: gweather-server
      port: 9000
    selector:
      app: grpc-weather
      tier: backend
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: grpc-weather-api
    labels:
      app: grpc-weather
      tier: api
  spec:
    selector:
      matchLabels:
        app: grpc-weather
        tier: api
    replicas: 1
    template:
      metadata:
        labels:
          app: grpc-weather
          tier: api
      spec:
        containers:
        - image: andrewb3000/gweather-api:v1
          imagePullPolicy: IfNotPresent
          name: grpc-weather-api
          ports:
            - containerPort: 8000
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: grpc-weather
    name: gweather-api
  spec:
    ports:
    - name: gweather-api
      port: 8000
    selector:
      app: grpc-weather
      tier: api
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: grpc-weather-ui
    labels:
      app: grpc-weather
      tier: ui
  spec:
    selector:
      matchLabels:
        app: grpc-weather
        tier: ui
    replicas: 1
    template:
      metadata:
        labels:
          app: grpc-weather
          tier: ui
      spec:
        containers:
        - image: andrewb3000/gweather-ui:v1
          imagePullPolicy: IfNotPresent
          name: grpc-weather-ui
          ports:
            - containerPort: 5000
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: grpc-weather
    name: gweather-ui
  spec:
    ports:
    - name: gweather-ui
      port: 5000
      # targetPort: 5000
    selector:
      app: grpc-weather
      tier: ui
